--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>CV Michael Zolotarenko</head>
+    <heading>CV Michael Zolotarenko</heading>
     <body>
         <h3>Michael Zolotarenko</h3>
         <h4>Python Developer</h4>
