--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <heading>CV Michael Zolotarenko</heading>
+    <head>
+        <title>Michael Zolotarenko</title>
+        <link rel="stylesheet" type=“text/css” href="styles.css">
+    </head>
     <body>
-        <h3>Michael Zolotarenko</h3>
-        <h4>Python Developer</h4>
-        <h5>Welcome to my web page</h5>
+        <h3>Python Developer</h3>
+        <h5>Welcome to my CV page</h5>
         <p>For more details, please contact me via LinkedIn</p>
     </body>
 </html>
