--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type=“text/css” href="styles.css">
     </head>
     <body>
+        <h2>Michael Zolotarenko</h2>
         <h3>Python Developer</h3>
         <h5>Welcome to my CV page</h5>
         <p>For more details, please contact me via LinkedIn</p>
