--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Michael Zolotarenko</title>
-        <link rel="stylesheet" type=“text/css” href="styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h2>Michael Zolotarenko</h2>
