--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <h2>Michael Zolotarenko</h2>
         <h3>Python Developer</h3>
         <h5>Welcome to my CV page</h5>
-        <p>For more details, please contact me via <a href="https://mikezolo.linkedin.com">LinkedIn</a></p>
+        <p>For more details, please contact me via <a href="https://www.linkedin.com/in/mikezolo/">LinkedIn</a></p>
     </body>
 </html>
