--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Michael Zolotarenko</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h2>Michael Zolotarenko</h2>
-        <h3>Python Developer</h3>
-        <h5>Welcome to my CV page</h5>
-        <p>For more details, please contact me via <a href="https://www.linkedin.com/in/mikezolo/">LinkedIn</a></p>
-    </body>
+<head>
+    <title>Michael Zolotarenko - Portfolio</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
+</head>
+<body>
+    <nav>
+        <a href="https://mikezolo.github.io"><button>Home</button></a>
+        <a href="https://mikezolo.github.io/portfolio-projects"><button>Portfolio</button></a>
+        <a href="https://mikezolo.github.io/certificates"><button>Certificates</button></a>
+        <button>About</button>
+        <a href="mailto:your-email@example.com"><button>Email</button></a>
+    </nav>
+    <h2>Michael Zolotarenko</h2>
+    <h3>Python Developer</h3>
+    <h5>Welcome to my CV and Portfolio page</h5>
+    <p>For more details, please contact me via <a href="https://www.linkedin.com/in/mikezolo/">LinkedIn</a></p>
+    <footer><p>License  |  ©Michael Zolotarenko 2024</p></footer>
+</body>
 </html>
