--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
     <h5>Welcome to my CV and Portfolio page</h5>
-    <p>For more details, please contact me via <a href="https://www.linkedin.com/in/mikezolo/">LinkedIn</a></p>
-    <footer><p>License  |  ©Michael Zolotarenko 2024</p></footer>
-</body>
+   
+    <a href="https://www.linkedin.com/in/mikezolo/">My LinkedIn</a>
+    <a href="mailto:mike.zolotarenko@gmail.com">Email me</a>
+    <footer><p>License  |  ©Michael Zolotarenko 2024</p></footer></body>
 </html>
