--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <h3>Python Developer</h3>
     <h5>Welcome to my CV and Portfolio page</h5>
    
-    <a href="https://www.linkedin.com/in/mikezolo/">My LinkedIn</a>
-    <a href="mailto:mike.zolotarenko@gmail.com">Email me</a>
+    <div class="bottom-links">
+        <a href="https://www.linkedin.com/in/mikezolo/">My LinkedIn</a>
+        <a href="mailto:mike.zolotarenko@gmail.com">Email me</a>
+    </div>
     <footer><p>License  |  ©Michael Zolotarenko 2024</p></footer></body>
 </html>
