--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <nav>
         <a href="https://mikezolo.github.io"><button>Home</button></a>
-        <a href="https://mikezolo.github.io/portfolio-projects"><button>Portfolio</button></a>
+        <a href="https://mikezolo.github.io/portfolio"><button>Portfolio</button></a>
         <a href="https://mikezolo.github.io/certificates"><button>Certificates</button></a>
         <button>About</button>
         <a href="mailto:mike.zolotarenko@gmail.com"><button>Email</button></a>
