Update index.html remove welcome add infoblock

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     </nav>
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
-    <h5>Welcome to my CV and Portfolio page</h5>
+    <h5></h5>
+    <hr/>
+    
+    <p class="info-update">Work in progress. Some features and links may be unavailable for the moment</p>
    
     <div class="bottom-links">
         <a href="https://www.linkedin.com/in/mikezolo/">My LinkedIn</a>
