--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="https://mikezolo.github.io/certificates"><button>Certificates ⏍</button></a>
         <a href="https://"><button>About ℹ︎</button></a>
         <a href="https://"><button>Blog ☕︎</button></a>
-        <a href="https://mikezolo.github.io/help-ukraine"><button>Help Ukraine 🇺🇦</button></a>
+        <button><a href="https://mikezolo.github.io/help-ukraine">Help Ukraine 🇺🇦</a></button>
         <a href="mailto:mike.zolotarenko@gmail.com"><button>Email ✉</button></a>
     </nav>
     <h2>Michael Zolotarenko</h2>
