--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
     <nav>
-        <a href="https://mikezolo.github.io"><button>Home ⌂</button></a>
-        <a href="https://mikezolo.github.io/portfolio"><button>Portfolio ⚒︎</button></a>
-        <a href="https://mikezolo.github.io/certificates"><button>Certificates ⏍</button></a>
-        <a href="https://"><button>About ℹ︎</button></a>
-        <a href="https://"><button>Blog ☕︎</button></a>
-        <a href="https://mikezolo.github.io/help-ukraine"><button>Help Ukraine 🇺🇦</button>🇺🇦</a>
-        <a href="mailto:mike.zolotarenko@gmail.com"><button>Email ✉</button></a>
+        <a href="https://mikezolo.github.io"><button>Home</button></a>
+        <a href="https://mikezolo.github.io/portfolio"><button>Portfolio</button></a>
+        <a href="https://mikezolo.github.io/certificates"><button>Certificates</button></a>
+        <a href="https://"><button>About</button></a>
+        <a href="https://"><button>Blog</button></a>
+        <a href="https://mikezolo.github.io/help-ukraine"><button>Help Ukraine 🇺🇦</button></a>
+        <a href="mailto:mike.zolotarenko@gmail.com"><button>✉︎</button></a>
     </nav>
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
