--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <a href="https://mikezolo.github.io/certificates"><button>Certificates</button></a>
         <a href="https://"><button>About</button></a>
         <a href="https://"><button>Blog</button></a>
-        <a href="https://mikezolo.github.io/help-ukraine"><button>Help Ukraine 🇺🇦</button></a>
-        <a href="mailto:mike.zolotarenko@gmail.com"><button>✉︎</button></a>
+        <a href="https://mikezolo.github.io/help-ukraine"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
+        <a href="mailto:mike.zolotarenko@gmail.com"><button>Email</button></a>
     </nav>
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
