--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
         <a href="https://www.linkedin.com/in/mikezolo/">My LinkedIn</a>
         <a href="mailto:mike.zolotarenko@gmail.com">Email me</a>
     </div>
-    <footer><p>License  |  ©Michael Zolotarenko 2024</p></footer></body>
+    <footer><p><a href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko</p></footer></body>
 </html>
