--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://"><button>About</button></a>
         <a href="https://"><button>Blog</button></a>
         <a href="https://mikezolo.github.io/help-ukraine"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
-        <a href="mailto:mike.zolotarenko@gmail.com"><button>Email</button></a>
+        <a href="mailto:mike.zolotarenko@gmail.com"><button>✉︎</button id="email"></a>
     </nav>
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
@@ -22,8 +22,9 @@
     <p class="info-update">Work in progress. Some features and links may be unavailable for the moment</p>
    
     <div class="bottom-links">
-        <a href="https://www.linkedin.com/in/mikezolo/">My LinkedIn</a>
-        <a href="mailto:mike.zolotarenko@gmail.com">Email me</a>
+        <p>Contact:</p>
+        <a href="https://www.linkedin.com/in/mikezolo/">LinkedIn</a>
+        <a href="mailto:mike.zolotarenko@gmail.com">Email</a>
     </div>
     <footer><p><a href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko</p></footer></body>
 </html>
