--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div class="bottom-links">
         <p>Contact:</p>
         <a href="https://www.linkedin.com/in/mikezolo/">LinkedIn</a>
+        <a href="https://github.com/mikezolo/">GitHub</a>
+        <a href="https://twitter.com/mikezolo_pro">Twitter</a>
         <a href="mailto:mike.zolotarenko@gmail.com">Email</a>
     </div>
     <footer><p><a href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko</p></footer></body>
