--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="https://mikezolo.github.io/certificates"><button>Certificates</button></a>
         <a href="https://"><button>About</button></a>
         <a href="https://"><button>Blog</button></a>
-        <a href="https://mikezolo.github.io/help-ukraine"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
+        <a href="https://www.freedombirds.help/"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
         <a href="mailto:mike.zolotarenko@gmail.com"><button>✉︎</button id="email"></a>
     </nav>
     <h2>Michael Zolotarenko</h2>
@@ -23,9 +23,9 @@
    
     <div class="bottom-links">
         <a>Contact:</a><a> </a>
-        <a href="https://www.linkedin.com/in/mikezolo/">LinkedIn</a><a> </a>
-        <a href="https://github.com/mikezolo/">GitHub</a><a> </a>
-        <a href="https://twitter.com/mikezolo_pro">Twitter</a><a> </a>
+        <a href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a><a> </a>
+        <a href="https://github.com/mikezolo/" target="_blank">GitHub</a><a> </a>
+        <a href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a><a> </a>
         <a href="mailto:mike.zolotarenko@gmail.com">Email</a>
     </div>
     <footer><p><a href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko</p></footer></body>
