--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://"><button>About</button></a>
         <a href="https://"><button>Blog</button></a>
         <a href="https://www.freedombirds.help/"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
-        <a href="mailto:mike.zolotarenko@gmail.com"><button>✉︎✉️</button id="email"></a>
+        <a href="mailto:mike.zolotarenko@gmail.com"><button>✉︎</button id="email"></a>
     </nav>
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
