--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Michael Zolotarenko - Portfolio</title>
+    <title>Michael Zolotarenko @Home</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
