--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
         <a href="https://"><button>About</button></a>
         <a href="https://"><button>Blog</button></a>
         <a href="https://www.freedombirds.help/"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
-        <a id="email-text" href="mailto:mike.zolotarenko@gmail.com"><button>✉︎</button id="email"></a>
+        <a id="email-text" href="mailto:mike.zolotarenko@gmail.com"><button id="email">✉︎</button></a>
     </nav>
+    <hr/>
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
     <h5></h5>
-    <hr/>
-    
-    <p class="info-update">Work in progress. Some features and links may be unavailable for the moment</p>
-   
+       
     <div class="bottom-links">
         <a>Contact:</a><a> </a>
         <a href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a><a> </a>
@@ -28,5 +26,10 @@
         <a href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a><a> </a>
         <a href="mailto:mike.zolotarenko@gmail.com">Email</a>
     </div>
+    <p></p>
+    <hr>
+    <hr>
+    <p class="infoblock">Work in progress. Some features and links may be unavailable for the moment</p>
+
     <footer><p><a href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko</p></footer></body>
 </html>
