--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
-    <nav>
+     <nav>
         <a href="https://mikezolo.github.io"><button>Home</button></a>
         <a href="https://mikezolo.github.io/portfolio"><button>Portfolio</button></a>
-        <a href="https://www.linkedin.com/in/mikezolo/details/certifications" target="_blank"><button>Certificates</button></a>
-        <a href="https://"><button>About</button></a>
-        <a href="https://"><button>Blog</button></a>
-        <a href="https://www.freedombirds.help/"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
+        <a href="https://www.linkedin.com/in/mikezolo/details/certifications/" target="_blank"><button>Certificates</button></a>
+        <a href="resources/under-constr-big.png" target="_blank"><button>About</button></a>
+        <a href="resources/under-constr-big.png" target="_blank"><button>Blog</button></a>
+        <a href="https://www.freedombirds.help" target="_blank"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
         <a id="email-text" href="mailto:mike.zolotarenko@gmail.com"><button id="email">✉︎</button></a>
     </nav>
     <hr/>
