Conform index.html to portfolio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
+
+<! TOP NAV BAR >
      <nav>
         <a href="https://mikezolo.github.io"><button>Home</button></a>
         <a href="https://mikezolo.github.io/portfolio"><button>Portfolio</button></a>
@@ -15,21 +17,28 @@
         <a id="email-text" href="mailto:mike.zolotarenko@gmail.com"><button id="email">✉︎</button></a>
     </nav>
     <hr/>
+
+<! HEADERS >
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
     <h5></h5>
-       
+
+<! BOTTOM LINKS >
+    <br>
     <div class="bottom-links">
-        <a>Contact:</a><a> </a>
-        <a href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a><a> </a>
-        <a href="https://github.com/mikezolo/" target="_blank">GitHub</a><a> </a>
-        <a href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a><a> </a>
-        <a href="mailto:mike.zolotarenko@gmail.com">Email</a>
+        <a class="detailer">Contact: </a>
+        <a href="https://www.linkedin.com/in/mikezolo/" target="_blank"> LinkedIn </a>
+        <a href="https://github.com/mikezolo/" target="_blank"> GitHub </a>
+        <a href="https://twitter.com/mikezolo_pro" target="_blank"> Twitter </a>
+        <a href="mailto:mike.zolotarenko@gmail.com"> Email </a>
     </div>
-    <p></p>
+    <p> </p>
+    <br>
     <hr>
-    <hr>
+
+<! INFO BLOCK >    
     <p class="infoblock">Work in progress. Some features and links may be unavailable for the moment</p>
 
+<! FOOTER >
     <footer><p><a href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko</p></footer></body>
 </html>
