--- a/index.html
+++ b/index.html
@@ -1,44 +1,59 @@
+<!--mikezolo / MIKEZOLO.github.io / index.html-->
 <!DOCTYPE html>
 <html>
+
+<!--HEAD (customized)-->
 <head>
     <title>Michael Zolotarenko @Home</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 
-<! TOP NAV BAR >
-     <nav>
-        <a href="https://mikezolo.github.io"><button>Home</button></a>
-        <a href="https://mikezolo.github.io/portfolio"><button>Portfolio</button></a>
-        <a href="https://www.linkedin.com/in/mikezolo/details/certifications/" target="_blank"><button>Certificates</button></a>
-        <a href="resources/under-constr-big.png" target="_blank"><button>About</button></a>
-        <a href="resources/under-constr-big.png" target="_blank"><button>Blog</button></a>
-        <a href="https://www.freedombirds.help" target="_blank"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
-        <a id="email-text" href="mailto:mike.zolotarenko@gmail.com"><button id="email">✉︎</button></a>
-    </nav>
-    <hr/>
+<!--TOP NAV BAR (inheritable)-->
+<nav>
+    <a href="https://mikezolo.github.io"><button>Home</button></a>
+    <a href="https://mikezolo.github.io/portfolio"><button>Portfolio</button></a>
+    <a href="https://www.linkedin.com/in/mikezolo/details/certifications/" target="_blank"><button>Certificates</button></a>
+    <a href="resources/under-constr-big.png" target="_blank"><button>About (⚒︎)</button></a>
+    <a href="resources/under-constr-big.png" target="_blank"><button>Blog (⚒︎)</button></a>
+    <a href="https://www.freedombirds.help" target="_blank"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
+    <a id="email-text" href="mailto:mike.zolotarenko@gmail.com"><button id="email">✉︎</button></a>
+</nav>
 
-<! HEADERS >
+<!--UNIVERSAL HEADER (inheritable)-->
     <h2>Michael Zolotarenko</h2>
     <h3>Python Developer</h3>
-    <h5></h5>
+    <hr>
 
-<! BOTTOM LINKS >
+<!--LOREM IPSUM BLOCK (customized)-->
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit. </p>
     <br>
-    <div class="bottom-links">
+
+<!--INFO BLOCK (customized)-->        
+    <p class="infoblock">*Work in progress. Some features and links may be unavailable for the moment.</p>
+    <br>
+
+<!--CONTACT LINKS (inheritable)-->
+    <hr>        
+    <div class="contact">
         <a class="detailer">Contact: </a>
         <a href="https://www.linkedin.com/in/mikezolo/" target="_blank"> LinkedIn </a>
         <a href="https://github.com/mikezolo/" target="_blank"> GitHub </a>
         <a href="https://twitter.com/mikezolo_pro" target="_blank"> Twitter </a>
         <a href="mailto:mike.zolotarenko@gmail.com"> Email </a>
     </div>
-    <p> </p>
-    <br>
     <hr>
+    <br>
+    <br>
 
-<! INFO BLOCK >    
-    <p class="infoblock">Work in progress. Some features and links may be unavailable for the moment</p>
-
-<! FOOTER >
-    <footer><p><a href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko</p></footer></body>
+<!--FOOTER (inheritable)-->        
+    <footer>
+        <p class="copyright"><a class="copyright" href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko
+            <a href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/mikezolo/" target="_blank">GitHub</a>
+            <a href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a>
+            <a href="mailto:mike.zolotarenko@gmail.com">Email</a>
+        </p>
+    </footer>
+</body>
 </html>
