--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
     <title>Michael Zolotarenko @Home</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
