--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <title>Michael Zolotarenko @Home</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=2.0, user-scalable=yes,minimum-scale=0.5"/>
 </head>
 <body>
 
