--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
     <br>
 
 <!--FOOTER (inheritable)-->        
+    <br>
+    <br>
+    <br>
     <footer>
         <p class="copyright"><a class="copyright" href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko
-            <a href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/mikezolo/" target="_blank">GitHub</a>
-            <a href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a>
-            <a href="mailto:mike.zolotarenko@gmail.com">Email</a>
+            <a class="contact" href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a>
+            <a class="contact" href="https://github.com/mikezolo/" target="_blank">GitHub</a>
+            <a class="contact" href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a>
+            <a class="contact" href="mailto:mike.zolotarenko@gmail.com">Email</a>
             <br>
         </p>        
     </footer>
