--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <br>
     <br>
     <footer>
-        <p class="copyright"><a class="copyright" href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a> | © 2024 Michael Zolotarenko
+        <p>
+            <a class="copyright" href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a>
+            | © 2024 Michael Zolotarenko
             <a class="contact" href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a>
             <a class="contact" href="https://github.com/mikezolo/" target="_blank">GitHub</a>
             <a class="contact" href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a>
