--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <p>
             <a class="license" href="https://github.com/mikezolo/mikezolo.github.io/blob/main/LICENSE">MIT License</a>
             | © 2024 Michael Zolotarenko
-            <a href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/mikezolo/" target="_blank">GitHub</a>
-            <a href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a>
-            <a href="mailto:mike.zolotarenko@gmail.com">Email</a>            
+            <a class="contact" href="https://www.linkedin.com/in/mikezolo/" target="_blank">LinkedIn</a>
+            <a class="contact" href="https://github.com/mikezolo/" target="_blank">GitHub</a>
+            <a class="contact" href="https://twitter.com/mikezolo_pro" target="_blank">Twitter</a>
+            <a class="contact" href="mailto:mike.zolotarenko@gmail.com" target="_blank">Email</a>            
         </p>
         <br>
         <br>
