--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <a href="https://www.linkedin.com/in/mikezolo/details/certifications/" target="_blank"><button>Certificates</button></a>
     <a href="https://github.com/mikezolo/mikezolo.github.io#michael-zolotarenkos-github-page" target="_blank"><button>About (⚒︎)</button></a>
     <a href="https://twitter.com/mikezolo_pro" target="_blank"><button>Blog (⚒︎)</button></a>
-    <a href="https://www.freedombirds.help" target="_blank"><button id="ukraine">Help Ukraine 🇺🇦</button></a>
-    <a id="email-text" href="mailto:mike.zolotarenko@gmail.com"><button id="email">✉︎</button></a>
+    <a href="https://www.freedombirds.help" target="_blank"><button>Help UA 🇺🇦</button></a>
 </nav>
 
 <!--UNIVERSAL HEADER (inheritable)-->
