--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <!--INFO BLOCK (customized)-->        
     <p class="infoblock">⚒︎ Work in progress. Some features and links may be unavailable for the moment.</p>
     <br>
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="mikezolo" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://be.linkedin.com/in/mikezolo?trk=profile-badge">Michael Zolotarenko</a></div>
+              
 
 <!--FOOTER (inheritable)-->        
     <br>
