Unify styles with portfolio, update paragraph

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 
 <!--LOREM IPSUM BLOCK (customized)-->
     <img class="main-userpic" src="https://avatars.githubusercontent.com/u/155497122?v=4">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales.</p>
+    <p>Experienced professional with over 20 years in aviation security, military, and physical security 
+        across public and private sectors. Recognized for leadership and innovation, honored as Employee 
+        of the Year at EL-AL Israel Airlines and HOT Telecommunications. Now, driven by purpose, I've 
+        dedicated the past two years to aiding Ukrainian refugees and the Army, leveraging my emergency 
+        management and communication skills. <br><br> As I return to my career, I'm excited to transition into IT 
+        development. From optimizing processes to leading teams, my diverse background equips me to excel 
+        in this new realm. Passionate about merging my expertise, research prowess, and technical skills 
+        as a Python Developer. Committed to continual growth and embracing new challenges in IT. Open to 
+        exciting opportunities ahead.</p>
     <br>
 
 <!--INFO BLOCK (customized)-->        
