--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
 
 <!--LOREM IPSUM BLOCK (customized)-->
     <img class="main-userpic" src="https://avatars.githubusercontent.com/u/155497122?v=4">
-    <p>Experienced professional with over 20 years in aviation security, military, and physical security 
-        across public and private sectors. Recognized for leadership and innovation, honored as Employee 
-        of the Year at EL-AL Israel Airlines and HOT Telecommunications. Now, driven by purpose, I've 
-        dedicated the past two years to aiding Ukrainian refugees and the Army, leveraging my emergency 
-        management and communication skills. <br><br> As I return to my career, I'm excited to transition into IT 
-        development. From optimizing processes to leading teams, my diverse background equips me to excel 
-        in this new realm. Passionate about merging my expertise, research prowess, and technical skills 
-        as a Python Developer. Committed to continual growth and embracing new challenges in IT. Open to 
-        exciting opportunities ahead.</p>
+    <p>Experienced professional with over 20 years in aviation security, military, and physical 
+        security across public and private sectors, now venturing into IT development as a Python Developer. 
+        Recognized for leadership and innovation, honored as Employee of the Year at EL-AL Israel Airlines 
+        and HOT Telecommunications. Now, driven by purpose, I've dedicated the past two years to aiding 
+        Ukrainian refugees and the Army, leveraging my emergency management and communication skills.
+        <br><br>
+        As I return to my career, I'm excited to transition into IT development. From optimizing processes 
+        to leading teams, my diverse background equips me to excel in this new realm. Passionate about 
+        merging my expertise, research prowess, and technical skills as a Python Developer. Committed to 
+        continual growth and embracing new challenges in IT. Open to exciting opportunities ahead.</p>
     <br>
 
 <!--INFO BLOCK (customized)-->        
